03-db.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  serviceName: "db"
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:8.0
          imagePullPolicy: Always
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d/
              name: db-init-sql
      volumes:
        - name: db-init-sql
          configMap:
            name: db-init-sql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
