08-app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: metabase/metabase:v0.52.6
          imagePullPolicy: Always
          ports:
            - name: metabase
              containerPort: 80
