08-app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  ports:
    - port: 80
      name: metabase
      targetPort: 80
  selector:
    app: app
