10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: metabase-ing
spec:
  rules:
    - host: francovaco-metabase.my.kube.um.edu.ar
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 80
            path: /
            pathType: Prefix
